alpha sorting resolved
Former-commit-id: ecbb9b6055a3c15a4f16a37a32cf481fe734388a
Former-commit-id: 6e91dccde66a4bf98d51acb88e62267f7a9d8eda
Former-commit-id: 34d3e3852b074563ab806e2d82fae712ac778ad2
Former-commit-id: 728f70cbe33ed6bc5bf6abdc4e24d843524778b6
Former-commit-id: 01c91bf431bebac1c542c3e32f7de916304e9243
Former-commit-id: 832482975d20bc81583020312175dad53d60c788

--- a/sections/research-blog.liquid
+++ b/sections/research-blog.liquid
@@ -100,32 +100,40 @@
                 <div class="research-links hideMe" id="byAlpha">
                     <a href="#theTop" class="back-to-top"></a>
                     {% assign articles = blog.articles | sort: 'title' %}
+                    {% assign letters = '' %}
+                    {% assign letter = blank %}
                     {%- paginate articles by 1000 -%}
-                                {%- for article in articles -%}
-                                {% assign current_letter = article.title | strip_html | upcase | truncate: 1, '' %}
-                                    <span id="alpha{{current_letter}}" class="topicAnchor"></span>
-                                    <h3>{{ current_letter }}</h3>
-                                    <div id=”{{ tag | handle }}” class=”sub-question-list”>
-                                        {%- for article in blog.articles -%}
-                                            {% assign checkArray = article.title | split:current_letter %}
-                                            {% if checkArray[0] == blank %}
-                                                <div class="research-link ">
-                                                    {%- render 'research-card',
-                                                        article: article,
-                                                        media_height: section.settings.image_height,
-                                                        media_aspect_ratio: article.image.aspect_ratio,
-                                                        show_image: section.settings.show_image,
-                                                        show_date: section.settings.show_date,
-                                                        show_author: section.settings.show_author,
-                                                        show_excerpt: true 
-                                                    -%}
-                                                    </div>
-                                            {%- endif -%}
-                                        {%- endfor -%}
-                                    </div>
-                            {% endfor %}
-                  
-                            {%- endpaginate -%}
+                        {%- for article in blog.articles -%}
+                            {% assign letter = article.title | slice: 0 | upcase %}
+                            {% unless letters contains letter %}
+                              {% assign letters = letters | append: letter | append: '|' %}
+                            {% endunless %}
+                        {%- endfor -%}
+                        {% assign letters = letters | split: '|' | sort %}
+                        {%- for current_letter in letters -%}
+                            <span id="alpha{{current_letter}}" class="topicAnchor"></span>
+                            <h3>{{ current_letter }}</h3>
+                            <div id=”{{ tag | handle }}” class=”sub-question-list”>
+                                {%- for article in blog.articles -%}
+                                    {% assign checkArray = article.title | split:current_letter %}
+                                    {% if checkArray[0] == blank %}
+                                        <div class="research-link ">
+                                            {%- render 'research-card',
+                                                article: article,
+                                                media_height: section.settings.image_height,
+                                                media_aspect_ratio: article.image.aspect_ratio,
+                                                show_image: section.settings.show_image,
+                                                show_date: section.settings.show_date,
+                                                show_author: section.settings.show_author,
+                                                show_excerpt: true 
+                                            -%}
+                                            </div>
+                                    {%- endif -%}
+                                {%- endfor -%}
+                            </div>
+                          {% endfor %}
+
+                    {%- endpaginate -%}
             </div>
     </div>
 </section>
