--- a/sections/components-page.liquid
+++ b/sections/components-page.liquid
@@ -13,7 +13,39 @@
 		</div>
 	</div>
 
-<div class="tanBG ">	
+
+
+
+	<section>
+		<h2 class="alignLeft" style="margin-top: 3rem;">Shop Sauna Components</h2>
+		
+		<ul id="product-grid" data-id="{{ section.id }}" class="
+	  grid product-grid grid--{{ section.settings.columns_mobile }}-col-tablet-down
+	  {% if section.settings.columns_desktop == 1 %} grid--full-width{% else %}
+		grid--{{ section.settings.columns_desktop }}-col-desktop
+	  {% endif %}">
+	  {% for product in collections.sauna-components.products %}
+		{% assign lazy_load = false %}
+		{%- if forloop.index > 2 -%}
+		  {%- assign lazy_load = true -%}
+		{%- endif -%}
+	
+		<li class="grid__item">
+		  {% render 'card-product-simple',
+			card_product: product,
+			media_aspect_ratio: section.settings.image_ratio,
+			show_secondary_image: section.settings.show_secondary_image,
+			show_vendor: section.settings.show_vendor,
+			show_rating: section.settings.show_rating,
+			lazy_load: lazy_load
+		  %}
+		</li>
+	  {%- endfor -%}
+	</ul>
+	
+	</section>
+
+	<div class="tanBG ">	
 	<section>
 		<h2 class="h2Spacing">Small Space Conversion</h2>
 		<div class="three-cols noMargin">
@@ -100,34 +132,6 @@
 	</div>
 </div>
 
-<section>
-	<h2 class="alignLeft">Shop Sauna Components</h2>
-	
-	<ul id="product-grid" data-id="{{ section.id }}" class="
-  grid product-grid grid--{{ section.settings.columns_mobile }}-col-tablet-down
-  {% if section.settings.columns_desktop == 1 %} grid--full-width{% else %}
-    grid--{{ section.settings.columns_desktop }}-col-desktop
-  {% endif %}">
-  {% for product in collections.sauna-components.products %}
-    {% assign lazy_load = false %}
-    {%- if forloop.index > 2 -%}
-      {%- assign lazy_load = true -%}
-    {%- endif -%}
-
-    <li class="grid__item">
-      {% render 'card-product-simple',
-        card_product: product,
-        media_aspect_ratio: section.settings.image_ratio,
-        show_secondary_image: section.settings.show_secondary_image,
-        show_vendor: section.settings.show_vendor,
-        show_rating: section.settings.show_rating,
-        lazy_load: lazy_load
-      %}
-    </li>
-  {%- endfor -%}
-</ul>
-
-</section>
 
 
 <script>
