--- a/sections/contact-form.liquid
+++ b/sections/contact-form.liquid
@@ -49,10 +49,8 @@
 
 
 
-<p class="contact-cols-text">Our customer care team is normally available (CST) during:<br /> 
-	8am - 7pm, Monday<br /> 
-    6am - 7pm, Tuesday - Thursday<br /> 
-    6am - 5pm, Friday<br /> 
+<p class="contact-cols-text">Our customer care team is normally available (CST) during:<br /> <br />
+	8am - 5pm, Monday - Friday 
 </p>
 </cms cms1>
 </section>
