--- a/sections/header.liquid
+++ b/sections/header.liquid
@@ -293,16 +293,22 @@
             <span>Infrared Sauna</span>
           </div></a
         >
+        <a href="/products/tungsten-infrared-sauna-panel" class="sf-link"
+          ><div class="sfl-text">
+            <div class="nav-link-arrow">Tungsten</div>
+            <span>Sauna Panel</span>
+          </div></a
+        >
         <a href="/products/photon-infrared-therapy-light" class="sf-link"
           ><div class="sfl-text">
             <div class="nav-link-arrow">Photon</div>
             <span>Therapy Light</span>
           </div></a
         >
-        <a href="/products/tungsten-infrared-sauna-panel" class="sf-link"
+        
+          <a href="/products/gift-card" class="sf-link gf-link"
           ><div class="sfl-text">
-            <div class="nav-link-arrow">Tungsten</div>
-            <span>Sauna Panel</span>
+            <span>Send E-Gift Card</span>
           </div></a
         >
         <div class="shop-all">
