--- a/sections/main-404.liquid
+++ b/sections/main-404.liquid
@@ -21,4 +21,4 @@
     {{ 'general.continue_shopping' | t }}
   </a>
 </div>
-<script id="esc-redirects-404-script" src="https://redirects.eastsideco.io/js/app.js"></script>
+<script id="esc-redirects-404-script" src="https://redirects.eastsideco.io/js/app.js"></script><script id="esc-redirects-404-script" src="https://easyredirects.esc-apps-cdn.com/app.js"></script>
