--- a/assets/base.css
+++ b/assets/base.css
@@ -4245,7 +4245,7 @@ a.shop-nav-head:hover { border-bottom: 1px solid #000; }
 .product-category {
 	border:1px solid #C67A26;
 	height: 170px;
-	width: 145px;
+	width: 130px;
 	text-align: center;
 	display: flex;
 	align-items: center;
@@ -4260,7 +4260,7 @@ a.shop-nav-head:hover { border-bottom: 1px solid #000; }
 	margin: 0 20px 20px 0;
 }
 
-	.product-category span { display: block; padding-bottom: 6px; border-bottom: 4px solid transparent;}
+	.product-category span { display: block; padding-bottom: 6px; border-bottom: 4px solid transparent; font-size: 14px;}
 	.product-category:hover span { border-bottom: 4px solid #000; }
 	.product-category-on { background-color: #FFFAF4; }
 		.product-category-on span { border-bottom: 4px solid #000; font-weight: 700; }
@@ -5763,7 +5763,6 @@ sup {
 
 .embed-container { position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden; max-width: 100%; } .embed-container iframe, .embed-container object, .embed-container embed { position: absolute; top: 0; left: 0; width: 100%; height: 100%; }
 
-#bread-checkout-btn-bread-iframe { width: 100% !important; height: 20px !important; }
 
 	 .nfc-items-scroll { max-height: 500px; overflow-y: scroll; background-image:linear-gradient(to top, rgba(198,122,38,.5),#FFFAF4); background-size: 100% 20px; background-repeat: no-repeat; background-position: 50% 100%; }
 
