--- a/assets/component-menu-drawer.css
+++ b/assets/component-menu-drawer.css
@@ -252,3 +252,22 @@ details[open].menu-opening > .menu-drawer__submenu {
 .menu-drawer .list-social__link {
   padding: 1.3rem 1.25rem;
 }
+
+
+.gf-link {
+  width: 100%;
+  font-weight: 400;
+  border-top: 1px solid #979797;
+  display: inline-block;
+  margin-top: 0;
+  text-transform: uppercase;
+  font-size: 1.4rem;
+  padding-top: 1.5rem;
+  margin-bottom: 0;
+}
+
+@media (max-width: 767px) {
+  .gf-link {
+    margin-bottom: 1.5rem;
+  }
+}
