--- a/assets/dark.css
+++ b/assets/dark.css
@@ -41,7 +41,9 @@
 .dark .warranty-col, .dark .legalText, .dark .fineprint, .dark .two-cols-narrow .col, .dark .contact-col, .dark .contact-cols-text,
 .dark .contact-tile, .dark .col-bordered a, .dark .event-box, .dark .event-link, .dark .event-invite, h4, .dark .sgl-text,
 .dark .sauna-types td, .dark .sauna-types th, .dark .research-links h3, .dark .darkP, .dark .header__icon, .dark .pt-price, .dark .price, .dark .card-information>.price, .dark .price--on-sale .price-item--regular, .dark td.cart-item__price .product-option, .dark .product-info-details, .dark .pot-col a, .dark .cart-count-bubble,
-  .dark td.cart-item__details .product-option, .dark .quantity__button, .dark .quantity__input, .dark .is-empty .cart__empty-text, .dark .is-empty .cart__warnings, .dark .cart__login-paragraph a {
+  .dark td.cart-item__details .product-option, .dark .quantity__button, .dark .quantity__input, .dark .is-empty .cart__empty-text, .dark .is-empty .cart__warnings, .dark .cart__login-paragraph a,
+  .dark .header-blog, .dark .header-blog h1, .dark .blog-articles__article h3, .dark .blog-articles__article p, .dark .blog-articles__article .tag-article, .dark .blog-articles__article .text-center, .dark .article-template__title, .dark .article-template__social-sharing, .dark .caption-with-letter-spacing, .dark .article-template__content, .dark .article-template__content a, .dark .share-button__button
+  {
   color: #FFF8E7 !important;
 }
 .dark .stickyBG .pt-price, .dark .stickyBG .price {
@@ -106,7 +108,7 @@
   background-color: #000;	
 }	
 
-.dark .yotpo .yotpo-nav ul .yotpo-nav-tab.yotpo-active .yotpo-nav-wrapper, .dark .product-info-tab:hover, .dark .product-info-tab-on {
+.dark .yotpo .yotpo-nav ul .yotpo-nav-tab.yotpo-active .yotpo-nav-wrapper, .dark .product-info-tab:hover, .dark .product-info-tab-on, .dark .nav-link:hover {
   border-bottom:4px solid #fff !important;
 }
 
@@ -230,6 +232,9 @@
   border-top: 1px solid #fff;
   background-color: transparent;
 }
+.dark .util-nav-link:hover, .dark .nav-arrow-link:hover, .dark .nla-title:hover, .dark .nav-learn-blog:hover, .dark .sf-link:hover span, .dark a.shop-nav-head:hover  {
+  border-bottom: 1px solid #fff!important;
+}
 
 .dark .yotpo-lightbox.yotpo-lightbox-new.yotpo .yotpo-modal.yotpo-modal-active .yotpo-lightbox-container.yotpo-active-display {
   border: solid 1px #e3e3e3!important;
@@ -246,7 +251,7 @@
 
 .dark .suggested-topics-row .suggested-topic:hover, 
 .dark .suggested-topics-row .suggested-topic-expand:hover {
-   background-color: #939393;
+   background-color: #939393 !important;
 }
 
 .dark .site-header-home .navBG {
