event page metadata conversion to metafields guru
Former-commit-id: 731175aca319a9ac8363810868c1f9be88a2c18c
Former-commit-id: 78f824a5d0f973d37fdaa29791dcf2e41fc5538e
Former-commit-id: ee692c3d2caa99f32efd4191b6718746e30d35e8

--- a/sections/event-page.liquid
+++ b/sections/event-page.liquid
@@ -56,8 +56,16 @@
                         <div class="event-link-div"><a href="{{page.metafields.registration-link.registrationlink}}" target="_blank" class="event-link">Register <svg xmlns="http://www.w3.org/2000/svg" width="14.759" height="7.753" overflow="visible"><g fill="none" stroke="#000"><path d="M0 3.876h14M10 .376l4 3.5-4 3.5"/></g></svg></a></div>
                     {% endunless %}
                 </div>
+
 				<div class="events-img">
-                    <img src="{{page.metafields.event-image.eventimage}}" /></div>
+                    {% assign file_object = page.metafields.event-image.eventimage %} <!-- replace the "set_test" part with your actual namespace and the "file" with the key -->
+                    {% if file_object != blank %} 
+                      <a href="/pages/{{ event.handle }}" class="events-img">
+                        <img src="{{ file_object | file_url }}" alt="" lazy>
+                    </a>
+                    
+                    {% endif %}
+                   </div>
 			</div>
 	</section>
 	
