--- a/sections/events-page.liquid
+++ b/sections/events-page.liquid
@@ -13,39 +13,45 @@
 
 	<section class="sec1000">
 		<h4>Upcoming Events</h4>
-
-{% assign events = page.metafields.event-page.eventpage | split: '|' %}
-<script>
-  console.log( {{page.metafields.event-page.eventpage}});
-</script>
+    {% assign events = page.metafields.event-page.eventpage.value %}
+    <script>
+      console.log( 'events: ' + {{ page.metafields.event-page.eventpage.value }});
+    </script>
 {% for event in events %}    
     <div class="event-box">
 				<div class="event-text">
-					<div class="event-title">{{ pages[event].title }}</div>
-					<p class="event-dates etica">{{ pages[event].metafields.start-date.startdate }} - {{ pages[event].metafields.end-date.enddate }}<br /><div class="et-location etica">
+					<div class="event-title">{{ event.title }}</div>
+					<p class="event-dates etica">{{ event.metafields.start-date.startdate }} - {{ event.metafields.end-date.enddate }}<br /><div class="et-location etica">
                         {% unless page.metafields.location-name.locationname == blank %}
-                            <span class="eventVenue">{{pages[event].metafields.location-name.locationname}}</span><br />
+                            <span class="eventVenue">{{ event.metafields.location-name.locationname }}</span><br />
                         {% endunless %}
-                        {% unless pages[event].metafields.location-street-addr.locationstreetaddr == blank %}
-                            <span class="eventAddress">{{pages[event].metafields.location-street-addr.locationstreetaddr}}</span> 
+                        {% unless event.metafields.location-street-addr.locationstreetaddr == blank %}
+                            <span class="eventAddress">{{ event.metafields.location-street-addr.locationstreetaddr }}</span> <br />
                         {% endunless %}
-                        {% unless pages[event].metafields.location-city.locationcity == blank %}
-                            <span class="eventCity">{{pages[event].metafields.location-city.locationcity}}</span> 
+                        {% unless event.metafields.location-city.locationcity == blank %}
+                            <span class="eventCity">{{ event.metafields.location-city.locationcity }}, </span> 
                         {% endunless %}
-                        {% unless pages[event].metafields.location-state.locationstate == blank %}
-                            <span class="eventState">{{pages[event].metafields.location-state.locationstate}}</span> 
+                        {% unless event.metafields.location-state.locationstate == blank %}
+                            <span class="eventState">{{ event.metafields.location-state.locationstate }}</span> 
                         {% endunless %}
-                        {% unless pages[event].metafields.location-zip.locationzip == blank %}
-                            <span class="eventZip">{{pages[event].metafields.location-zip.locationzip}}</span>
+                        {% unless event.metafields.location-zip.locationzip == blank %}
+                            <span class="eventZip">{{ event.metafields.location-zip.locationzip }}</span>
                         {% endunless %}
-                        {% unless pages[event].metafields.location-country.locationcountry == blank %}
-                         <span class="eventCountry">{{pages[event].metafields.location-country.locationcountry}}</span> 
+                        {% unless event.metafields.location-country.locationcountry == blank %}
+                         <span class="eventCountry">{{ event.metafields.location-country.locationcountry }}</span> 
                          {% endunless %}
 					</div></p>
-					<p>{{ pages[event].content }}</p>
-					<div class="event-link-div"><a href="{{ pages[event].metafields.registration-link.registrationlink }}" target="_blank" class="event-link">Register <svg xmlns="http://www.w3.org/2000/svg" width="14.759" height="7.753" overflow="visible"><g fill="none" stroke="#000"><path d="M0 3.876h14M10 .376l4 3.5-4 3.5"/></g></svg></a></div>
+					<p>{{ event.content }}</p>
+					<div class="event-link-div"><a href="{{ event.metafields.registration-link.registrationlink }}" target="_blank" class="event-link">Register <svg xmlns="http://www.w3.org/2000/svg" width="14.759" height="7.753" overflow="visible"><g fill="none" stroke="#000"><path d="M0 3.876h14M10 .376l4 3.5-4 3.5"/></g></svg></a></div>
 				</div>
-				<a href="/pages/{{ event }}" class="events-img"><img src="{{pages[event].metafields.event-image.eventimage}}" loading="lazy" /></a>
+        {% assign file_object = event.metafields.event-image.eventimage %} <!-- replace the "set_test" part with your actual namespace and the "file" with the key -->
+{% if file_object != blank %} 
+ <div class = "file-reference">
+  <a href="/pages/{{ event.handle }}" class="events-img">
+    <img src="{{ file_object | file_url }}" alt="" lazy>
+</a>
+ </div>
+{% endif %}
 			</div>
 {% endfor %}
 
