--- a/assets/base.css
+++ b/assets/base.css
@@ -3850,7 +3850,7 @@ a.shop-nav-head:hover { border-bottom: 1px solid #000; }
 		.event-link:hover { border-bottom: 1px solid #000; }
 
 
-.events-img { display: block; width: 50%; }
+.events-img { display: block; }
 
 .events-img img { width: 100%; }
 
@@ -3867,7 +3867,19 @@ a.shop-nav-head:hover { border-bottom: 1px solid #000; }
 	.event-top-text { width: 100%; }
 	.et-title { text-transform: uppercase; font-size: 3rem; font-weight: bold; margin-bottom: .5em; max-width: 50%;}
 	.et-dates { font-size: 1.8rem; font-weight: bold; margin-bottom: 1em; }
-	.et-location {background: url(location.svg) no-repeat; background-position: 0 2px; background-size: 11px; font-size: 1.8rem; padding-left: 20px; line-height: 1.2em;}
+	.et-location {
+		background: url(location.svg) no-repeat; 
+		background-position: 0 2px; 
+		background-size: 11px; 
+		font-size: 16px; 
+		padding-left: 20px; 
+		filter: invert(95%) sepia(0%) saturate(6128%) hue-rotate(350deg) brightness(107%) contrast(100%);
+		line-height: 1.2em;
+	}
+
+	.et-location.etica span {
+		filter: invert(95%) sepia(0%) saturate(6128%) hue-rotate(350deg) brightness(107%) contrast(100%);
+	}
 	
 	.et-link { border: 1px solid #fff; text-transform: uppercase; font-weight: bold; padding: .75em 3em; color: #fff; text-decoration: none;}
 	
