--- a/assets/dark.css
+++ b/assets/dark.css
@@ -39,7 +39,7 @@
 .dark .your-cart, .dark .yc-item-name, .dark .yc-col, .dark .yc-col-learnMore, .dark .page-anchor, .dark .acc-term, .dark .health-benefit,
 .dark .research-topics, .dark .topicLink, .dark .research-link a, .dark .research-link p, .dark .genericText, .dark .warranty-box, 
 .dark .warranty-col, .dark .legalText, .dark .fineprint, .dark .two-cols-narrow .col, .dark .contact-col, .dark .contact-cols-text,
-.dark .contact-tile, .dark .col-bordered a, .dark .event-box, .dark .event-link, .dark .event-invite, h4, .dark .sgl-text,
+.dark .contact-tile, .dark .col-bordered a, .dark .event-box, .dark .event-link, .dark .event-invite,.dark h4, .dark .sgl-text,
 .dark .sauna-types td, .dark .sauna-types th, .dark .research-links h3, .dark .darkP, .dark .header__icon, .dark .pt-price, .dark .price, .dark .card-information>.price, .dark .price--on-sale .price-item--regular, .dark td.cart-item__price .product-option, .dark .product-info-details, .dark .pot-col a, .dark .cart-count-bubble,
   .dark td.cart-item__details .product-option, .dark .quantity__button, .dark .quantity__input, .dark .is-empty .cart__empty-text, .dark .is-empty .cart__warnings, .dark .cart__login-paragraph a,
   .dark .header-blog, .dark .header-blog h1, .dark .blog-articles__article h3, .dark .blog-articles__article p, .dark .blog-articles__article .tag-article, .dark .blog-articles__article .text-center, .dark .article-template__title, .dark .article-template__social-sharing, .dark .caption-with-letter-spacing, .dark .article-template__content, .dark .article-template__content a, .dark .share-button__button
@@ -107,6 +107,10 @@
 .dark .dcDiscountBox, .dark .cbb-shipping-rates-calculator-region-select  {	
   background-color: #000;	
 }	
+
+.dark .et-location.etica, .dark .et-location.etica span {
+  filter: none;
+}
 
 .dark .yotpo .yotpo-nav ul .yotpo-nav-tab.yotpo-active .yotpo-nav-wrapper, .dark .product-info-tab:hover, .dark .product-info-tab-on, .dark .nav-link:hover {
   border-bottom:4px solid #fff !important;
