--- a/sections/events-page.liquid
+++ b/sections/events-page.liquid
@@ -1,104 +1,126 @@
+<div class="generic-headerBG">
+  <div class="generic-header">
+    <div class="gh-text">
+      <cms id='cms0'>
+        <h1>Events</h1>
+        <p class="etica">Find our where you can meet us and try SaunaSpace products in person.</p>
+      </cmscms0>
+    </div>
+  </div>
+</div>
 
-
-	<div class="generic-headerBG">
-		<div class="generic-header">
-			<div class="gh-text">
-				<cms id='cms0'>
-<h1>Events</h1>
-<p class="etica">Find our where you can meet us and try SaunaSpace products in person.</p>
-</cms cms0>
-			</div>
-		</div>
-	</div>
-
-	<section class="sec1000">
-		<h4>Upcoming Events</h4>
-    {% assign events = page.metafields.event-page.eventpage.value %}
-    <script>
-      console.log( 'events: ' + {{ page.metafields.event-page.eventpage.value }});
-    </script>
-{% for event in events %}    
+<section class="sec1000">
+  <h4>Upcoming Events</h4>
+  {% assign events = page.metafields.event-page.eventpage.value %}
+  <script>
+    console.log('events: ' + {{ page.metafields.event-page.eventpage.value }});
+  </script>
+  {% for event in events %}
     <div class="event-box">
-				<div class="event-text">
-					<div class="event-title">{{ event.title }}</div>
-					<p class="event-dates etica">{{ event.metafields.start-date.startdate }} - {{ event.metafields.end-date.enddate }}<br /><div class="et-location etica">
-                        {% unless page.metafields.location-name.locationname == blank %}
-                            <span class="eventVenue">{{ event.metafields.location-name.locationname }}</span><br />
-                        {% endunless %}
-                        {% unless event.metafields.location-street-addr.locationstreetaddr == blank %}
-                            <span class="eventAddress">{{ event.metafields.location-street-addr.locationstreetaddr }}</span> <br />
-                        {% endunless %}
-                        {% unless event.metafields.location-city.locationcity == blank %}
-                            <span class="eventCity">{{ event.metafields.location-city.locationcity }}, </span> 
-                        {% endunless %}
-                        {% unless event.metafields.location-state.locationstate == blank %}
-                            <span class="eventState">{{ event.metafields.location-state.locationstate }}</span> 
-                        {% endunless %}
-                        {% unless event.metafields.location-zip.locationzip == blank %}
-                            <span class="eventZip">{{ event.metafields.location-zip.locationzip }}</span>
-                        {% endunless %}
-                        {% unless event.metafields.location-country.locationcountry == blank %}
-                         <span class="eventCountry">{{ event.metafields.location-country.locationcountry }}</span> 
-                         {% endunless %}
-					</div></p>
-					<p>{{ event.content }}</p>
-					<div class="event-link-div"><a href="{{ event.metafields.registration-link.registrationlink }}" target="_blank" class="event-link">Register <svg xmlns="http://www.w3.org/2000/svg" width="14.759" height="7.753" overflow="visible"><g fill="none" stroke="#000"><path d="M0 3.876h14M10 .376l4 3.5-4 3.5"/></g></svg></a></div>
-				</div>
-        {% assign file_object = event.metafields.event-image.eventimage %} <!-- replace the "set_test" part with your actual namespace and the "file" with the key -->
-{% if file_object != blank %} 
- <div class = "file-reference">
-  <a href="/pages/{{ event.handle }}" class="events-img">
-    <img src="{{ file_object | file_url }}" alt="" lazy>
-</a>
- </div>
-{% endif %}
-			</div>
-{% endfor %}
+      <div class="event-text">
+        <div class="event-title">{{ event.title }}</div>
+        <p class="event-dates etica">{{ event.metafields.start-date.startdate }}
+          {% unless event.metafields.end-date.enddate == blank %}
+            - {{ event.metafields.end-date.enddate }}
+          {% endunless %}
+          <br/><div class="et-location etica">
+            {% unless page.metafields.location-name.locationname == blank %}
+              <span class="eventVenue">{{ event.metafields.location-name.locationname }}</span><br/>
+            {% endunless %}
+            {% unless event.metafields.location-street-addr.locationstreetaddr == blank %}
+              <span class="eventAddress">{{ event.metafields.location-street-addr.locationstreetaddr }}</span>
+              <br/>
+            {% endunless %}
+            {% unless event.metafields.location-city.locationcity == blank %}
+              <span class="eventCity">{{ event.metafields.location-city.locationcity }},
+              </span>
+            {% endunless %}
+            {% unless event.metafields.location-state.locationstate == blank %}
+              <span class="eventState">{{ event.metafields.location-state.locationstate }}</span>
+            {% endunless %}
+            {% unless event.metafields.location-zip.locationzip == blank %}
+              <span class="eventZip">{{ event.metafields.location-zip.locationzip }}</span>
+            {% endunless %}
+            {% unless event.metafields.location-country.locationcountry == blank %}
+              <span class="eventCountry">{{ event.metafields.location-country.locationcountry }}</span>
+            {% endunless %}
+          </div>
+        </p>
+        <p>{{ event.content }}</p>
+        <div class="event-link-div">
+          <a
+            href="{{ event.metafields.registration-link.registrationlink }}"
+            target="_blank"
+            class="event-link">Register
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              width="14.759"
+              height="7.753"
+              overflow="visible">
+              <g fill="none" stroke="#000"><path d="M0 3.876h14M10 .376l4 3.5-4 3.5" /></g>
+            </svg>
+          </a>
+        </div>
+      </div>
+      {% assign file_object = event.metafields.event-image.eventimage %}
+      <!-- replace the "set_test" part with your actual namespace and the "file" with the key -->
+      {% if file_object != blank %}
+        <div class="file-reference">
+          <a href="/pages/{{ event.handle }}" class="events-img">
+            <img
+              src="{{ file_object | file_url }}"
+              alt=""
+              lazy>
+          </a>
+        </div>
+      {% endif %}
+    </div>
+  {% endfor %}
 
-	</section>
+</section>
 
 
-	<section class="sec1000">
-		<div class="event-invite">
-			<cms id='cms2'>
-<h2>Invite us to your event</h2>
-<p>Do you know an industry event we should attend? Would you like our founder to speak on the science of infrared light? Drop us a line.</p>
-<div class="btnBox"><a href="/pages/contact" class="btn">Contact Us</a></div>
-</cms cms2>
-		</div>
-	</section>
+<section class="sec1000">
+  <div class="event-invite">
+    <cms id='cms2'>
+      <h2>Invite us to your event</h2>
+      <p>Do you know an industry event we should attend? Would you like our founder to speak on the science of infrared light? Drop us a line.</p>
+      <div class="btnBox">
+        <a href="/pages/contact" class="btn">Contact Us</a>
+      </div>
+    </cmscms2>
+  </div>
+</section>
 
 
 {% schema %}
-{
-  "name": "t:sections.main-page.name",
-  "tag": "section",
-  "class": "section",
-  "settings": [
-    {
-      "type": "header",
-      "content": "t:sections.all.padding.section_padding_heading"
-    },
-    {
-      "type": "range",
-      "id": "padding_top",
-      "min": 0,
-      "max": 100,
-      "step": 4,
-      "unit": "px",
-      "label": "t:sections.all.padding.padding_top",
-      "default": 36
-    },
-    {
-      "type": "range",
-      "id": "padding_bottom",
-      "min": 0,
-      "max": 100,
-      "step": 4,
-      "unit": "px",
-      "label": "t:sections.all.padding.padding_bottom",
-      "default": 36
-    }
-  ]
-}
+  {
+    "name": "t:sections.main-page.name",
+    "tag": "section",
+    "class": "section",
+    "settings": [
+      {
+        "type": "header",
+        "content": "t:sections.all.padding.section_padding_heading"
+      }, {
+        "type": "range",
+        "id": "padding_top",
+        "min": 0,
+        "max": 100,
+        "step": 4,
+        "unit": "px",
+        "label": "t:sections.all.padding.padding_top",
+        "default": 36
+      }, {
+        "type": "range",
+        "id": "padding_bottom",
+        "min": 0,
+        "max": 100,
+        "step": 4,
+        "unit": "px",
+        "label": "t:sections.all.padding.padding_bottom",
+        "default": 36
+      }
+    ]
+  }
 {% endschema %}
